# spectral-learning

./: .gitignore  README.md  main.py  makefile  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
models/: pca_model.py  svd_model.py
tests/: test_data_loader.py  test_matrix_operations.py  test_pca_model.py  test_svd_model.py
utils/: clustering.py  data_loader.py  matrix_operations.py  visualizer.py
